# stm32H7

./: CMakeLists.txt  README.md
config/: stm32h7xx_hal_conf.h
src/: main.cpp
